# anon-notes

./: .dockerignore  Dockerfile  db.py  docker-compose.yml  main.py  pyproject.toml  schemas.py  views.py
app/: db.py  main.py  settings.py
app/api/v1/: views.py
app/services/: notes.py
infra/: docker-compose.yml
src/: chiper.py  db.py  main.py  settings.py
src/api/v1/: views.py
src/templates/: index.html
templates/: index.html
