[tool.poetry]
name = "service-anon-notes"
version = "0.1.0"
description = ""
authors = ["moovlaze <max.moovlaze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.14"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
